--- a/requirements.txt
+++ b/requirements.txt
@@ -27,6 +27,7 @@ passlib[bcrypt]==1.7.4
 python-dotenv==1.0.0
 httpx==0.25.2
 aiofiles==23.2.1
+psutil==5.9.6
 
 # Development and testing
 pytest==7.4.3
